# kbase_protein_query_module

./: .gitignore  DOCUMENTATION_SUMMARY.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  deploy.cfg  kbase.yml  kbase_protein_network_analysis_toolkit.spec  kbase_protein_query_module.spec  pyproject.toml  requirements.txt
.cursor/rules/: code_changes.mdc  communication_style.mdc  documentation.mdc  environment_management.mdc  error_recovery.mdc  quality_standards.mdc  research_approach.mdc  task_execution.mdc  testing_philosophy.mdc  testing_preferences.mdc  validation_approach.mdc  workflow_preferences.mdc
data/: family_centroids.npz  family_centroids_binary.npz
data/esm2_t6_8M_UR50D_local/: config.json
data/families/: FAM0.h5  FAM1.h5  FAM2.h5  FAM3.h5  FAM4.h5  FAMX.h5  FAMY.h5  FAMZ.h5  family_0.h5  family_1.h5  family_10.h5  family_11.h5  family_12.h5  family_13.h5  family_14.h5  family_15.h5  family_16.h5  family_17.h5  family_18.h5  family_19.h5  family_2.h5  (+87 more)
docs/: DOCUMENTATION_SUMMARY.md
html_reports/: protein_analysis_report_1755101402.html
lib/: README.md
scripts/: README.md  create_faiss_indexes.py  entrypoint.sh  generate_dummy_data.py  run_async.sh  run_tests.sh  setup_test_data.py  start_server.sh
test/: README.md  kbase_protein_network_analysis_toolkit_server_test.py  kbase_protein_query_module_query_server_test.py  run_comprehensive_tests.py  run_reorganized_tests.py  run_tests.py  run_tests.sh  test.cfg  test_assign_protein_family.py  test_embedding_generator.py  test_report.txt  test_workflow_orchestrator.py
ui/: README.md
(+378 files in other folders)
